# DP-MultiRAG

./: README.md  args.py  demo.py  func.py  pyproject.toml
data/: README.md  docs.json
dp_multirag/: __init__.py  cli.py  config.py  evidence.py  generation.py  ledger.py  llm.py  pipeline.py  retrieval.py
dp_multirag/data/: README.md  docs.json  reference_answers.json  turns.json
dp_multirag/examples/: trace.txt
