[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dp-multirag"
version = "0.1.0"
description = "DP-MultiRAG: history-aware differential privacy for multi-turn RAG."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "DP-MultiRAG authors" }]
keywords = ["differential privacy", "RAG", "retrieval augmented generation", "LLM"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security :: Cryptography",
    "License :: OSI Approved :: MIT License",
]
dependencies = ["openai>=1.30.0"]

[project.scripts]
dp-multirag = "dp_multirag.cli:main"

[tool.setuptools]
packages = ["dp_multirag"]
include-package-data = true

[tool.setuptools.package-data]
dp_multirag = ["data/*.json", "data/*.md", "examples/*"]
